<resources>
    <string name="app_name">TravelApp</string>
    <string name="special_offers">today\'s offers</string>
    <string name="place">norway</string>
    <string name="city">oslo</string>
    <string name="duration_trip">2 days</string>
    <string name="price">$200</string>
    <string name="text_button">Proceed to Checkout</string>
    <string name="text_total">total:</string>
    <string name="string_checkout">your credit card information to proceed your payment</string>
    <string name="text_amount">$200</string>
    <string name="text_card_number">card number</string>
    <string name="text_month">MM</string>
    <string name="text_year_card">YY</string>
    <string name="text_cvv">CVV</string>
    <string name="text_name_card">name on card</string>
    <string name="text_payment">make your payment</string>
    <string name="full_alphabet">abcdefghijklmnopqrstuvxywz ABCDEFGHIJKLMNOPQRSTUVXYWZ</string>
    <string name="text_purchase_realized">your purchase has been realized ; )</string>
    <string name="text_congratulations">congratulations!</string>
    <string name="text_check">check your order:</string>
    <string name="text_button_purchase">continue to purchase</string>
</resources>
