<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/activity_checkout_text_info_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/string_checkout"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activity_checkout_text_view_total_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_checkout_text_info_id" />

    <TextView
        android:id="@+id/activity_checkout_text_view_amount_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/activity_checkout_text_view_total_text_id"
        app:layout_constraintTop_toBottomOf="@+id/activity_checkout_text_view_total_text_id"
        tools:text="@string/text_amount" />

    <EditText
        android:id="@+id/activity_checkout_edit_text_card_number_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/text_card_number"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_checkout_text_view_amount_id"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/activity_checkout_edit_text_card_month_id"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_month"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/activity_checkout_edit_text_card_cvv_id"
        app:layout_constraintStart_toStartOf="@id/activity_checkout_edit_text_card_number_id"
        app:layout_constraintTop_toBottomOf="@id/activity_checkout_edit_text_card_number_id"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/activity_checkout_edit_text_card_year_id"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_year_card"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/activity_checkout_edit_text_card_cvv_id"
        app:layout_constraintStart_toEndOf="@id/activity_checkout_edit_text_card_month_id"
        app:layout_constraintTop_toBottomOf="@id/activity_checkout_edit_text_card_number_id"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/activity_checkout_edit_text_card_cvv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/text_cvv"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="@id/activity_checkout_edit_text_card_number_id"
        app:layout_constraintTop_toBottomOf="@id/activity_checkout_edit_text_card_number_id"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/activity_checkout_edit_text_card_name_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="@string/full_alphabet"
        android:hint="@string/text_name_card"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/activity_checkout_edit_text_card_cvv_id"
        app:layout_constraintStart_toStartOf="@+id/activity_checkout_edit_text_card_month_id"
        app:layout_constraintTop_toBottomOf="@+id/activity_checkout_edit_text_card_cvv_id"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/activity_checkout_button_ok_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/proceed_checkout_round_orange_button"
        android:text="@string/text_payment"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/activity_checkout_edit_text_card_name_id"
        app:layout_constraintStart_toStartOf="@+id/activity_checkout_edit_text_card_name_id"
        app:layout_constraintTop_toBottomOf="@+id/activity_checkout_edit_text_card_name_id" />


</androidx.constraintlayout.widget.ConstraintLayout>